[gd_scene load_steps=8 format=2]

[ext_resource path="res://Asset/Enemy/Crab/Crab_Run.png" type="Texture" id=1]
[ext_resource path="res://Sence/Enemies/Crab.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5, 3.5 )

[sub_resource type="Animation" id=7]
resource_name = "New Anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("walk:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("walk:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 0.7 ), Vector2( 0.3, 0.3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("walk:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("walk:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 23.2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("walk:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("walk:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("walk:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9.5, 2 )

[node name="Crab" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.470588, 0.184314, 0.184314, 1 )
position = Vector2( -2.5, 12.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 7 )
anims/RESET = SubResource( 3 )
anims/walk = SubResource( 2 )

[node name="FloorChecker" type="RayCast2D" parent="."]
position = Vector2( 7, 4 )
enabled = true
cast_to = Vector2( 0, 24 )
collision_mask = 2

[node name="Top_checker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_checker"]
modulate = Color( 0.517647, 0.945098, 0.160784, 1 )
position = Vector2( -2.5, 5 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="walk" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 2

[connection signal="body_entered" from="Top_checker" to="." method="_on_Top_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
